# HotelBookingCancellationPredictor

./: .coverage  .flake8  .gitignore  Makefile  README.md  app.py  hotel-booking.ipynb  pyproject.toml  requirements.txt
.github/: SETUP_GUIDE.md
.github/workflows/: README.md  ci.yml  code-quality.yml  deploy-huggingface.yml  documentation.yml  model-evaluation.yml  release.yml
Hotel-Booking/: README.md  app.py  best_model.pkl  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
commands/: run_tests.py
configs/: config.toml
data/processed/: X_test.csv  y_test.csv
docs/: Data Science Project Proposal.docx  ci-pipeline.md
mlruns/739761496111055445/: meta.yaml
notebooks/: hotel-booking.ipynb
pages/: 1_Findings.py  __init__.py  conclusion.py  findings.py  model.py  product.py
reports/: best_model.pkl  best_model_metrics.json  evaluation_report.json  model_results.csv  validation_report.json
scripts/: evaluate.py  export_model_for_deployment.py  generate_eda_reports.py  merge_data.py  preprocess.py  profile_data_quality_properties.py  train.py  validate_data.py
src/: __init__.py
src/config/: logging.py  settings.py
src/data/: cleaning.py  collection.py  gx_validation.py  ingestion.py  preprocess.py  validation.py
src/evaluation/: business_metrics.py  error_analysis.py  (+1 more)
tests/: conftest.py  test_collection.py  test_data.py  test_features.py  test_integration_pipeline.py  test_metrics.py  test_models.py  test_preprocess.py  test_training_pipeline.py  test_validation.py
(+29 files in other folders)
