[tool.poetry]
name = "hotel-cancellation-prediction"
version = "0.1.0"
description = "Production-grade hotel booking cancellation prediction pipeline"
authors = ["Team 7"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
xgboost = "^2.1.1"
catboost = "^1.2.7"
mlflow = "^2.17.2"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
python-dotenv = "^1.0.1"
joblib = "^1.4.2"
jupyter = "^1.1.1"
imblearn = "^0.0"
tqdm = "^4.67.3"
pycountry = "^26.2.16"
great-expectations = "^1.17.0"
kaleido = "0.2.1"
loguru = "^0.7.2"
tomli = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
flake8 = "^7.1.1"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
